# esp32_mqtt_temp_sensor

./: .gitignore  CMakeLists.txt  README.md
main/: CMakeLists.txt  Kconfig.projbuild  button.c  config.h  dht20.c  dht20.h  isr.c  isr.h  led.c  led.h  main.c  mqtt.c  mqtt.h  mqtt_self_ca.pem  ota.c  ota.h  wifi.c
