idf_component_register(SRCS   "ota.c"
                              "dht20.c"
                              "main.c"
                              "button.c"
                              "led.c"
                              "isr.c"
                              "mqtt.c"
			      "wifi.c"
                           
                       INCLUDE_DIRS ".")
